# sofia-sip-demo

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  branchs.xml  configure.ac
src/: Makefile.am  sofia_sip_demo.c
